Revisao de tudo para novo deploy